--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  text-align: center;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  text-align: left;
 }
 
 .logo {
